--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,1 +1,16 @@
-<p>view works!</p>
+<!-- {{ groups | json }} -->
+@if(loading) {
+<h3 class="loading">Loading... please wait...</h3>
+} @else {
+<h3>{{ entry.data.title }}</h3>
+
+<div class="topic-container">
+  <p>{{ entry.data.abstract }}</p>
+
+  <div class="chips"><div class="chip"></div></div>
+
+  <!-- <h4>{{ entry.data.title }}</h4> -->
+  <!-- <p class="help-abstract">{{ entry.data.abstract }}</p> -->
+  <div class="help-body" [innerHTML]="sanitizeHtml(entry.data.body)"></div>
+</div>
+}
