Add rendering of labels

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#top">
+          <a [routerLink]="['/']">
             <div class="ariton-logo-container">
               <div class="ariton-logo" alt="Ariton logo"></div>
               <div class="ariton-text" alt="Ariton logo"></div>
