--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -4,12 +4,14 @@
 } @else {
 <h3>{{ entry.data.title }}</h3>
 
-<div class="topic-container">
+<div class="topic-view">
   <p>{{ entry.data.abstract }}</p>
 
-  @for(tag of entry.record.tags['labels']; track tag) { 
-    <div class="chips"><div class="chip">{{ tag }}</div></div>
-  }
+  <div class="chips">
+    @for(tag of entry.record.tags['labels']; track tag) {
+    <span class="chip">{{ tag }}</span>
+    }
+  </div>
 
   <!-- <h4>{{ entry.data.title }}</h4> -->
   <!-- <p class="help-abstract">{{ entry.data.abstract }}</p> -->
