--- a/src/app/tag/tag.component.html
+++ b/src/app/tag/tag.component.html
@@ -1,17 +1,13 @@
-<h1 class="headline" id="help">Welcome. How can we help?</h1>
-
 @if(loading) {
 <h3 class="loading">Loading... please wait...</h3>
-} @else { @for(group of data.groups | keyvalue; track group.key) {
-<a [routerLink]="['/t', group.key]"
-  ><h3>{{ group.key }}</h3></a
->
+} @else {
+<h3>{{ tag }}</h3>
 <div class="topic-container">
-  @for(entry of group.value; track entry) {
+  @for(entry of data.groups[tag]; track entry) {
   <a class="topic" [routerLink]="['/r', entry.id]">
     <h4>{{ entry.data.title }}</h4>
     <p class="help-abstract">{{ entry.data.abstract }}</p>
   </a>
   }
 </div>
-} }
+}
