Improve responsiveness for small screens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,8 +61,8 @@
 </main>
 
 <div class="download-container">
-  <div class="ariton-logo-footer" alt="Ariton logo"></div>
-  Crafted with ❤️ by Ariton team
+  <div class="ariton-logo-footer hide-tiny" alt="Ariton logo"></div>
+  <span class="hide-small">Crafted with ❤️ by Ariton team</span>
   <a href="https://alpha.ariton.app">
     <button>Open Ariton</button>
   </a>
