Optimize CSS for Ariton Help Center

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,8 @@
         <li class="hide-tiny">
           <a class="menu-link" href="https://ariton.app">Back to Ariton.app</a>
         </li>
+        <!-- <li class="expand">
+        </li> -->
         <li>
           <a href="#" onclick="event.preventDefault();" class="theme-toggle">
             <svg width="30" height="30" id="light-icon">
