Improve the menu and layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,15 +11,16 @@
           </a>
         </li>
 
-        <li class="hide-small">
+        <!-- <li class="hide-small">
           <a class="menu-link" [routerLink]="['/']">Help Center</a>
-        </li>
-        <li class="hide-tiny">
-          <a class="menu-link" href="https://ariton.app">Back to Ariton.app</a>
-        </li>
-        <!-- <li class="expand">
         </li> -->
-        <li>
+        <li class="hide-tiny">
+          <a class="menu-link" href="https://ariton.app">Website</a>
+        </li>
+        <li class="hide-small">
+          <a class="menu-link" href="https://alpha.ariton.app">App</a>
+        </li>
+        <li class="toggle">
           <a href="#" onclick="event.preventDefault();" class="theme-toggle">
             <svg width="30" height="30" id="light-icon">
               <circle cx="15" cy="15" r="6" fill="currentColor" />
