--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,11 @@
 :host {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.expand {
-    flex-grow: 10;
+.toggle {
+  flex-grow: 10 !important;
+  align-self: right !important;
+  margin-left: auto !important;
+  text-align: right;
 }
