--- a/src/styles.css
+++ b/src/styles.css
@@ -302,12 +302,17 @@ footer {
   display: flex;
 }
 
+nav {
+  width: 100%;
+}
+
 nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
+  box-sizing: border-box;
 }
 
 nav li {
