--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
 
 <div class="download-container">
   <div class="ariton-logo-footer hide-tiny" alt="Ariton logo"></div>
-  <span class="hide-small">Crafted with ❤️ by Ariton team</span>
+  <span class="hide-small">Crafted with ❤️</span>
   <a href="https://alpha.ariton.app">
     <button>Open Ariton</button>
   </a>
